Finished the 'Limit of a Function' page and started the 'Undefined Limits' page. Changed the course title from 'Calculus I' to 'Single Variable Calculus' in order to fit both calc 1 and 2 in one course. Also finalized the lesson plan for single variable calculus.

--- a/Functions_TheBasics.html
+++ b/Functions_TheBasics.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
-            Functions: The Basics | Calculus I | MWi - MathWise Institute
+            Functions: The Basics | Single Variable Calculus | MWi - MathWise Institute
         </title>
         <link rel="stylesheet" href="Main_Head.css">
         <link rel="stylesheet" href="Functions_TheBasics_Style.css">
@@ -30,7 +30,7 @@
         <div class="Body">
             <h2 class="heading">
                 <button onclick="window.location.href='calculus1.html'" class="heading_button">
-                    Calculus I
+                    Single Variable Calculus
                 </button>
             </h2>
             <h3>Lesson 1: Functions and Limits</h3>
@@ -41,8 +41,9 @@
                     one answer for each input value. For example, the following set of ordered pairs
                     defines a function:
                     <br>
-                    <center>\((1,2), (9,0), (7,1), (8,3), (0,4), (5,7), (6,9), (3,3)\).</center>
-                    <br>
+                    <p class="center_text">
+                        \((1,2), (9,0), (8,3), (0,4), (5,7), (6,9), (3,3)\).
+                    </p>
                     Note that it is not necessary for an input value, \(x\), to provide a unique output
                     value, \(f(x)\). From the ordered pairs above, you can see that the inputs \(8\) and \(3\) produce
                     an output value of \(3\). The opposite, however, is not true. That is, an input value must always
@@ -56,9 +57,7 @@
                     also known as a <b>surjective function</b> or <b>onto</b>, is a function where every output value comes From
                     at least one input value. A <b>bijection</b> is a function that is both an injection and a surjection.
                     <br><br>
-                    <center>
-                        <img class="bigFigure" src="Types_of_functions.png" alt="Images of the different types of fuctions">
-                    </center>
+                    <img class="bigFigure" src="Types_of_functions.png" alt="Images of the different types of fuctions">
                     <br><br>
                     From the image above:
                     <ul>
