--- a/calculus1.html
+++ b/calculus1.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
-            Calculus I | MWi - MathWise Institute
+            Single Variable Calculus | MWi - MathWise Institute
         </title>
         <link rel="stylesheet" href="Main_Head.css">
         <link rel="stylesheet" href="calculus1_style.css">
@@ -30,7 +30,7 @@
         <div class="Body">
             <h2 class="heading">
                 <button onclick="window.location.href='calculus1.html'" class="heading_button">
-                    Calculus I
+                    Single Variable Calculus
                 </button>
                 <button onclick="window.location.href='Functions_TheBasics.html'" class="next_button">
                     Get Started
@@ -45,57 +45,74 @@
                     to include a variety of problems that can be applied to different versions of the course.
                 </p>
                 <p>
-                    Our Calculus I course will walk you through all of the material typically covered in a
+                    Our Single Variable Calculus course will walk you through all of the material typically covered in a
                     semester-long university course. Thus, it is reasonable to expect to finish the course in
-                    about 3 to 4 months. Each lesson could theoretically be covered in one (long) sitting.
-                    Additionally, at the end of every lesson there is problem set on the lesson's material that 
-                    should be completed before continuing. Each problem set will have around 6 to 12 problems in
-                    total, split into three different sections: easy, moderate, and challenging. An answer key to
+                    about 3 to 4 months. Each lesson could, theoretically, be covered in one (long) sitting.
+                    Additionally, at the end of every lesson there is problem set on the lesson's material which 
+                    should be completed before continuing. Each problem set will be split into three different sections: easy, moderate, and challenging. An answer key to
                     the problem sets will also be provided, with a step-by-step solution to all of the problems.
                 </p>
                 <p>
-                    Below, you will find the lesson plan for the course. We hope it is manageable and efficient.
+                    Below, you will find the lesson plan for the course. We hope it is manageable, efficient, and rewarding.
                 </p>
             </div>
             <div>
                 <h2>Lesson Plan:</h2>
-                <ol>
-                    <li><a class="lesson_links" href="Functions_TheBasics.html">Functions and Limits</a></li>
-                        <ul>
+                <ol id="Lesson_plan">
+                    <li class="Lesson"><a class="lesson_links" href="Functions_TheBasics.html">Functions and Limits</a></li>
+                        <ol start="1">
                             <li><a class="lesson_links" href="Functions_TheBasics.html">Functions: The Basics</a></li>
                             <li><a class="lesson_links" href="LimitOfAFunction.html">Limit of a Function</a></li>
-                            <li><a class="lesson_links" href="#">Inifinity as a Limit (Undefined Limits)</a></li>
-                        </ul>
-                    <li><a class="lesson_links" href="#">Limits</a></li>
-                        <ul>
-                            <li>Numerically</li>
-                            <li>Analytically</li>
-                            <li>Infinity</li>
-                        </ul>
-                    <li><a class="lesson_links" href="#">Derivatives</a></li>
-                        <ul>
-                            <li>Chain Rule</li>
-                            <li>Product Rule</li>
-                            <li>Quotient Rule</li>
-                            <li>Inverse Trig Functions</li>
-                        </ul>
-                    <li><a class="lesson_links" href="#">Related Rates</a></li>
-                        <ul>
-                            <li>Implicit Differentiation</li>
-                        </ul>
-                    <li><a class="lesson_links" href="#">Summations</a></li>
-                        <ul>
-                            <li>Area Under Functions</li>
-                        </ul>
-                    <li><a class="lesson_links" href="#">Integration</a></li>
-                        <ul>
-                            <li>Definite Integrals</li>
-                            <li>U-Substitution</li>
-                            <li>Extrema</li>
-                            <li>First Deriviate Test</li>
-                            <li>Second Derivative Test</li>
-                        </ul>
-                    <li><a class="lesson_links" href="#">Optimization</a></li>
+                            <li><a class="lesson_links" href="UndefinedLimits.html">Inifinity as a Limit, Undefined Limits, Continuity</a></li>
+                            <li><a class="lesson_links" href="#">Trigonometric Limits</a></li>
+                            <br>
+                        </ol>
+                    <li class="Lesson"><a class="lesson_links" href="#">Derivatives</a></li>
+                        <ol start="5">
+                            <li><a class="lesson_links" href="#">Derivatives, Rate of Change, Slope, and Velocity</a></li>
+                            <li><a class="lesson_links" href="#">Derivatives of Products, Quotients, and Trigonometric Functions</a></li>
+                            <li><a class="lesson_links" href="#">Chain Rule, Higher Derivatives</a></li>
+                            <li><a class="lesson_links" href="#">Implicit Differentiation, Inverses</a></li>
+                            <li><a class="lesson_links" href="#">Exponential and Logarithmic Functions</a></li>
+                            <li><a class="lesson_links" href="#">Logarithmic Differentiation, Hyperbolic Functions</a></li>
+                            <br>
+                        </ol>
+                    <li class="Lesson"><a class="lesson_links" href="#">Differentiation and it's Applications</a></li>
+                        <ol start="11">
+                            <li><a class="lesson_links" href="#">Linear and Quadratic Approximations</a></li>
+                            <li><a class="lesson_links" href="#">Curve Sketching</a></li>
+                            <li><a class="lesson_links" href="#">Second Derivative Test, Max-min Problems</a></li>
+                            <li><a class="lesson_links" href="#">Related Rates</a></li>
+                            <li><a class="lesson_links" href="#">Newton's Method and Other Applications</a></li>
+                            <li><a class="lesson_links" href="#">Mean Value Theorem, Inequalities</a></li>
+                            <li><a class="lesson_links" href="#">Differentials, Antiderivatives</a></li>
+                            <li><a class="lesson_links" href="#">Differential Equations, Separable-variable Equations</a></li>
+                            <br>
+                        </ol>
+                    <li class="Lesson"><a class="lesson_links" href="#">Integration</a></li>
+                        <ol start="19">
+                            <li><a class="lesson_links" href="#">Definite Integrals</a></li>
+                            <li><a class="lesson_links" href="#">First Fundamental Theorem of Calculus</a></li>
+                            <li><a class="lesson_links" href="#">Second Fundamental Theorem of Calculus</a></li>
+                            <li><a class="lesson_links" href="#">Applications to Logarithms and Geometry</a></li>
+                            <li><a class="lesson_links" href="#">Volumes by Disks and Shells</a></li>
+                            <li><a class="lesson_links" href="#">Work, Average Value, Probability</a></li>
+                            <li><a class="lesson_links" href="#">Numerical Integration, Riemann Sum</a></li>
+                            <br>
+                        </ol>
+                    <li class="Lesson"><a class="lesson_links" href="#">Integration Techniques</a></li>
+                        <ol start="26">
+                            <li><a class="lesson_links" href="#">U-Substitution and Trigonometric Integrals</a></li>
+                            <li><a class="lesson_links" href="#">Inverse Substitution, Completing the Square</a></li>
+                            <li><a class="lesson_links" href="#">Partial Fractions</a></li>
+                            <li><a class="lesson_links" href="#">Integration by Parts, Redcutions Formulae</a></li>
+                            <li><a class="lesson_links" href="#">Parametric Equations, Arclength, Surface Area</a></li>
+                            <li><a class="lesson_links" href="#">Polar Coordinates, Area in Polar Coordinates</a></li>
+                            <li><a class="lesson_links" href="#">Indeterminant Forms: L'Hôspital's Rile</a></li>
+                            <li><a class="lesson_links" href="#">Improper Integrals</a></li>
+                            <li><a class="lesson_links" href="#">Infinite Series and Convergence Tests</a></li>
+                            <li><a class="lesson_links" href="#">Taylor's Series</a></li>
+                        </ol>
                 </ol>
             </div>
             <br/>
