--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
                 <h3>
                     Available courses:
                     <ul>
-                        <li><a class="Subject_Links" href="calculus1.html">Calculus I (work in progress)</a></li>
+                        <li><a class="Subject_Links" href="calculus1.html">Single Variable Calculus (work in progress)</a></li>
                         </br>
-                        <li>Calculus II (not yet developed)</li>
-                        </br>
-                        <li>Calculus II (not yet developed)</li>
+                        <li>Multi Variable Calculus (not yet developed)</li>
                         </br>
                         <li>Differential Equations (not yet developed)</li>
                         </br>
