--- a/calculus1.html
+++ b/calculus1.html
@@ -105,10 +105,10 @@
                             <li><a class="lesson_links" href="#">U-Substitution and Trigonometric Integrals</a></li>
                             <li><a class="lesson_links" href="#">Inverse Substitution, Completing the Square</a></li>
                             <li><a class="lesson_links" href="#">Partial Fractions</a></li>
-                            <li><a class="lesson_links" href="#">Integration by Parts, Redcutions Formulae</a></li>
+                            <li><a class="lesson_links" href="#">Integration by Parts, Reductions Formulae</a></li>
                             <li><a class="lesson_links" href="#">Parametric Equations, Arclength, Surface Area</a></li>
                             <li><a class="lesson_links" href="#">Polar Coordinates, Area in Polar Coordinates</a></li>
-                            <li><a class="lesson_links" href="#">Indeterminant Forms: L'Hôspital's Rile</a></li>
+                            <li><a class="lesson_links" href="#">Indeterminant Forms: L'Hôspital's Rule</a></li>
                             <li><a class="lesson_links" href="#">Improper Integrals</a></li>
                             <li><a class="lesson_links" href="#">Infinite Series and Convergence Tests</a></li>
                             <li><a class="lesson_links" href="#">Taylor's Series</a></li>
