Worked on the content for the 'Undefined Limits' page. Changed some of formatting on the lesson plan and added some figures.

--- a/LimitOfAFunction.html
+++ b/LimitOfAFunction.html
@@ -170,7 +170,7 @@
                     Previous: Functions: The Basics
                 </button>
                 <button onclick="window.location.href='UndefinedLimits.html'" class="next_button">
-                    Next: Inifinity as a Limit, Undefined Limits, Continuity
+                    Next: Inifinity as a Limit, Undefined Limits, Continuity, and Trigonometric Limits
                 </button>
             </div>
             <br><br>
