--- a/calculus1.html
+++ b/calculus1.html
@@ -63,8 +63,8 @@
                         <ol start="1">
                             <li><a class="lesson_links" href="Functions_TheBasics.html">Functions: The Basics</a></li>
                             <li><a class="lesson_links" href="LimitOfAFunction.html">Limit of a Function</a></li>
-                            <li><a class="lesson_links" href="UndefinedLimits.html">Inifinity as a Limit, Undefined Limits, Continuity</a></li>
-                            <li><a class="lesson_links" href="#">Trigonometric Limits</a></li>
+                            <li><a class="lesson_links" href="UndefinedLimits.html">Inifinity as a Limit, Undefined Limits, Continuity, and Trigonometric Limits</a></li>
+                            <li><a class="lesson_links" href="#">Techniques of Evaluating Limits</a></li>
                             <br>
                         </ol>
                     <li class="Lesson"><a class="lesson_links" href="#">Derivatives</a></li>
